using position sticky to fix navbar and solve scrollbar issue

--- a/src/styles/IntroductionText.scss
+++ b/src/styles/IntroductionText.scss
@@ -5,7 +5,6 @@
   background: $playlist-bg;
   padding: 50px 0 50px;
   position: relative;
-  top: -35px;
   transform-style: preserve-3d;
   z-index: 4;
 
